After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 788109 - Indicator icons drawn incorrectly when compositing is off
Indicator icons drawn incorrectly when compositing is off
Status: RESOLVED FIXED
Product: gnome-panel
Classification: Other
Component: notification area
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Panel Maintainers
Panel Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-09-24 21:03 UTC by Ori Avtalion
Modified: 2017-10-08 17:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Screenshot of the problem (5.79 KB, image/png)
2017-09-24 21:03 UTC, Ori Avtalion
Details

Description Ori Avtalion 2017-09-24 21:03:58 UTC
Created attachment 360324 [details]
Screenshot of the problem

Using gnome-panel 1:3.24.1-1ubuntu2.

I'm on Ubuntu 17.10 running gnome-flashback with compositing-manager turned OFF.

When icons are displayed in the notification area, their background appears to smear.

See attached screenshot.