notification-area: fix try icons when compositing is off

This reverts commit 06e938f808043a51f3d71ef701e9e48111f73307.

https://bugzilla.gnome.org/show_bug.cgi?id=788109